caputils-0.7.7
--------------

	* fix: regression fix. multiple streams caused the second stream to be
	       ignored.

caputils-0.7.6
--------------

	* fix: uint64_t printing in capdump.
	* fix: fixing capfilter.
	* add: stream_copy as wrapper for stream_write operating on caphead.
	* add: caphead_t typedef
	* change: added default address argument for stream_from_getopt
	* change: capdump --marker now takes a port number.
	* add: functions for working with timepico.
	* add: improvements to capshow.
	* fix: asorted bugs related to new buffering algorithm and capfiles.

caputils-0.7.5
--------------

	* add: capshow (aliased as consumer-ls)
	* add: --tp.port which matches either src or dst port.
	* add: ability to set buffer size at initialization (use 0 for old
	       default)
	* change: the buffering behaviour has changed from only buffering when
	          empty to continious buffering.
	* change: `stream_t` is now a pointer and should be used in place of
	          `struct stream*`. Existing applications should change from
	          `stream_t*` to `stream_t`.
	* fix: pkg-config file libcap_utils-0.7 now includes all libraries.
	* add: stream_from_getopt and stream_print_info helpers.
	* fix: large-file support for 32bit arch.
	* fix: support for specifying pcap prefix to configure.
	* add: capmarker: utility for sending a special marker packets.
	* add: adding timeout to capdump which increases the responsiveness, e.g.
	       when piping to another application. Defaults to 1000ms.
	* fix: ethernet hproto was truncated to uint8_t.
	* fix: select call in fill_buffer would not propagate errors properly so
	       SIGINT would not be caught by user and thus stuck in infinite
	       loop.

caputils-0.7.4
--------------

	* change: logmsg using mutex to prevent interleaved output.
	* change: pcap2cap only supports capfiles. Use mp instead.
	* fix: issue in pcap2cap causing an inifinite loop over the same packet.