@@ -64,6 +64,9 @@ marker key (domain specific)
 .TP
 \fB\-h\fR, \fB\-\-help
 Short help.
+.TP
+\fB\-\-progress\fR[=\fIFD\fR]
+Writes a progress report to \fIFD\fR (default stderr) every 60th second.
 .SH COPYRIGHT
 Copyright (C) 2011-2012 David Sveningsson <dsv@bth.se>.
 .SH "SEE ALSO"
